<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarseActivity">
    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="622dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="#00BCD4"
            android:gravity="center"
            android:text="@string/text_sistem"
            tools:text="@string/text_sistem" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="110dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/signup" />

        <EditText
            android:id="@+id/Name_conf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_name" />

        <EditText
            android:id="@+id/ced_confi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_cedula1"
            android:inputType="number" />

        <EditText
            android:id="@+id/pass_confi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_pass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_Registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00BCD4"
            android:text="@string/btn_registrar1"
            tools:text="@string/btn_registrar1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>