<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityPagos">
    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="665dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_pagosin"
            android:textSize="30sp"
            tools:text="@string/text_pagosin" />

        <EditText
            android:id="@+id/TextFactura"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_Pago_Fac"
            android:inputType="number" />

        <Spinner
            android:id="@+id/spinnerId"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/text_hora_salid"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/text_Pagos_Pago"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_pago_pago"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_Pagar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00BCD4"
            android:text="@string/text_pago_pagar"
            tools:text="@string/text_pago_pagar" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>