<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarSesionActivity">
    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="677dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="85dp"
            android:layout_height="73dp"
            app:srcCompat="@drawable/login" />

        <EditText
            android:id="@+id/cedulaIniciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_cedula"
            android:inputType="number" />

        <EditText
            android:id="@+id/passwordIniciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00BCD4"

            android:text="@string/btn_iniciarSesion"
            tools:text="@string/btn_iniciarSesion" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>